HSEARCH-4522 Simplify test configuration common to all JDKs above JDK11