@@ -12,6 +12,12 @@
     <name>Hibernate Search ITs - ORM - CDI</name>
     <description>Hibernate Search integration tests for the Hibernate ORM integration with CDI</description>
 
+    <properties>
+        <surefire.jvm.args.module>
+            ${test.weld.jvm.args}
+        </surefire.jvm.args.module>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.hibernate.search</groupId>
@@ -61,25 +67,6 @@
             </plugin>
         </plugins>
     </build>
-
-    <profiles>
-        <profile>
-            <id>testWithJdk11+</id>
-            <activation>
-                <property>
-                    <name>java-version.test.release</name>
-                    <value>!8</value>
-                </property>
-            </activation>
-            <properties>
-                <!-- Weld performs illegal accesses to java.base to generate proxies, so we need to allow them -->
-                <surefire.jvm.args.module>
-                    --add-opens java.base/java.security=ALL-UNNAMED
-                    --add-opens java.base/java.lang=ALL-UNNAMED
-                </surefire.jvm.args.module>
-            </properties>
-        </profile>
-    </profiles>
 
 </project>
 
